--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -15,15 +15,15 @@
     <header>
         <nav>
             <div class="conteneur">
-              <a class="fleche" href="index.html">
-                <i class="fas fa-arrow-left"></i>
-              </a>
-              <a class="titre" href="index.html">
-                <h5>ohmyfood</h5>
-            </a>
-              </div>
-          </nav>
-      </header>
+                <a class="fleche" href="index.html">
+                    <i class="fas fa-arrow-left"></i>
+                </a>
+                <a class="titre" href="index.html">
+                    <h5>ohmyfood</h5>
+                </a>
+            </div>
+        </nav>
+    </header>
     <!--Fin NavBar-->
     <main id="pages">
         <div class="restaurant">
@@ -52,13 +52,13 @@
                             <div class="cartes cartes1">
                                 <div class="description">
                                     <h3>Tartare de poulpe acidulé</h3>
-                                    <p>Aux zestes d'orange</p>
-                                </div>
-                                <div class="prix">
-                                    <span>25€</span>
-                                </div>
-                                <div class="check">
-                                    <i class="fas fa-check-circle"></i>
+                                    <div class="description_desc">
+                                        <p>Aux zestes d'orange</p>
+                                        <span class="prix">25€</span>
+                                        <div class="check">
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
@@ -66,129 +66,133 @@
                             <div class="cartes cartes2">
                                 <div class="description">
                                     <h3>Velouté de légumes d'antan</h3>
-                                    <p>Carotte, panais, topinambour</p>
-                                </div>
-                                <div class="prix">
-                                    <span>35€</span>
-                                </div>
-                                <div class="check">
-                                    <i class="fas fa-check-circle"></i>
-                                </div>
-                            </div>
+                                    <div class="description_desc">
+                                        <p>Carotte, panais, topinambour</p>
+                                        <span class="prix">35€</span>
+                                        <div class="check">
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                    </div>
+                                </div>                         
+                     </div>
 
                             <!--cartes 3-->
                             <div class="cartes cartes3">
                                 <div class="description">
                                     <h3>Soupe à l'oignon</h3>
-                                    <p>Revisitée</p>
-                                </div>
-                                <div class="prix">
-                                    <span>20€</span>
-                                </div>
-                                <div class="check">
-                                    <i class="fas fa-check-circle"></i>
-                                </div>
+                                    <div class="description_desc">
+                                        <p>Revisitée</p>
+                                        <span class="prix">20€</span>
+                                        <div class="check">
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                    </div>
+                                </div>         
                             </div>
-                        </div>
-                    </div>
+
+                   </div>
+                   </div>
 
                     <!--2eme block Plats-->
                     <div class="plats">
                         <h2>PLATS</h2>
                         <div class="ensemblemenu">
                             <div class="cartes cartes4">
+
                                 <div class="description">
                                     <h3>Coquilles Saint-Jacques</h3>
-                                    <p>Accompagnées d'une purée de panais</p>
-                                </div>
-                                <div class="prix">
-                                    <span>40€ </span>
-                                </div>
-                                <div class="check">
-                                    <i class="fas fa-check-circle"></i>
-                                </div>
+                                    <div class="description_desc">
+                                        <p>Accompagnées d'une purée de panais</p>
+                                        <span class="prix">40€</span>
+                                        <div class="check">
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                    </div>
+                            </div>
                             </div>
 
                             <!--cartes 2-->
                             <div class="cartes cartes5">
                                 <div class="description">
                                     <h3>Magret de canard</h3>
-                                    <p>Et parmentier de pommes de terre</p>
-                                </div>
-                                <div class="prix">
-                                    <span>35€</span>
-                                </div>
-                                <div class="check">
-                                    <i class="fas fa-check-circle"></i>
-                                </div>
+                                    <div class="description_desc">
+                                        <p>Et parmentier de pommes de terre</p>
+                                        <span class="prix">35€</span>
+                                        <div class="check">
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                    </div>
+                            </div>
                             </div>
 
                             <!--cartes 3-->
                             <div class="cartes cartes6">
                                 <div class="description">
                                     <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                                    <p>Sur son lit de gnocchis aux légumes</p>
-                                </div>
-                                <div class="prix">
-                                    <span>44€</span>
-                                </div>
-                                <div class="check">
-                                    <i class="fas fa-check-circle"></i>
-                                </div>
+                                    <div class="description_desc">
+                                        <p>Sur son lit de gnocchis aux légumes</p>
+                                        <span class="prix">44€</span>
+                                        <div class="check">
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                    </div>
                             </div>
+                            </div>                           
                         </div>
                     </div>
+
                     <!--3eme block Desserts-->
                     <div class="desserts">
                         <h2>DESSERTS</h2>
                         <div class="ensemblemenu">
-
                             <!--cartes 1-->
                             <div class="cartes cartes7">
                                 <div class="description">
                                     <h3>Pétales de violettes glacés</h3>
-                                    <p>Et purée de noisettes</p>
-                                </div>
-                                <div class="prix">
-                                    <span>18€ </span>
-                                </div>
-                                <div class="check">
-                                    <i class="fas fa-check-circle"></i>
-                                </div>
+                                    <div class="description_desc">
+                                        <p>Et purée de noisettes</p>
+                                        <span class="prix">18€</span>
+                                        <div class="check">
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                    </div>
                             </div>
+                            </div>
+
+
 
                             <!--cartes 2-->
                             <div class="cartes cartes8">
                                 <div class="description">
                                     <h3>Fondant au chocolat</h3>
-                                    <p>Revisité</p>
-                                </div>
-                                <div class="prix">
-                                    <span>22€</span>
-                                </div>
-                                <div class="check">
-                                    <i class="fas fa-check-circle"></i>
-                                </div>
+                                    <div class="description_desc">
+                                        <p>Revisité</p>
+                                        <span class="prix">22€</span>
+                                        <div class="check">
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                    </div>
                             </div>
-
+                            </div>
 
                             <!--cartes 3-->
                             <div class="cartes cartes9">
                                 <div class="description">
                                     <h3>Millefeuille croustillant</h3>
-                                    <p>Myrtilles et pâte d’amande</p>
-                                </div>
-                                <div class="prix">
-                                    <span>23€ </span>
-                                </div>
-                                <div class="check">
-                                    <i class="fas fa-check-circle"></i>
-                                </div>
+                                    <div class="description_desc">
+                                        <p>Myrtilles et pâte d’amande</p>
+                                        <span class="prix">23€</span>
+                                        <div class="check">
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                    </div>
                             </div>
+                            </div>
+                  
 
                         </div>
                     </div>
-
+                    
                 </div>
             </section>
 
