--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -53,44 +53,45 @@
             <div class="cartes cartes1">
               <div class="description">
                 <h3>Fricassée d'escargot</h3>
-                <p>Au piment d'espelette</p>
-              </div>
-              <div class="prix">
-                <span>25€</span>
-              </div>
-              <div class="check">
-                <i class="fas fa-check-circle"></i>
+                <div class="description_desc">
+                  <p>Au piment d'espelette</p>
+                  <span class="prix">25€</span>
+                  <div class="check">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
               </div>
             </div>
 
             <!--cartes 2-->
             <div class="cartes cartes2">
+
               <div class="description">
                 <h3>Foie gras de canard mi-cuit</h3>
-                <p>Et ses copeaux de truffe noire</p>
-              </div>
-              <div class="prix">
-                <span>35€</span>
-              </div>
-              <div class="check">
-                <i class="fas fa-check-circle"></i>
+                <div class="description_desc">
+                  <p>Et ses copeaux de truffe noire</p>
+                  <span class="prix">35€</span>
+                  <div class="check">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
               </div>
             </div>
-
 
             <!--cartes 3-->
             <div class="cartes cartes3">
               <div class="description">
                 <h3>Oeuf au plat</h3>
-                <p>Assaisonné à la truffe sur lit de poireaux</p>
-              </div>
-              <div class="prix">
-                <span>20€</span>
-              </div>
-              <div class="check">
-                <i class="fas fa-check-circle"></i>
+                <div class="description_desc">
+                  <p>Assaisonné à la truffe sur lit de poireaux</p>
+                  <span class="prix">20€</span>
+                  <div class="check">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
               </div>
             </div>
+
           </div>
         </div>
 
@@ -101,29 +102,32 @@
 
             <!--cartes 4-->
             <div class="cartes cartes4">
+
               <div class="description">
                 <h3>Filet de boeuf aux herbes</h3>
-                <p>Accompagné de sa ribambelle de légumes</p>
-              </div>
-              <div class="prix">
-                <span>40€ </span>
-              </div>
-              <div class="check">
-                <i class="fas fa-check-circle"></i>
+                <div class="description_desc">
+                  <p>Accompagné de sa ribambelle de légumes</p>
+                  <span class="prix">40€</span>
+                  <div class="check">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
               </div>
             </div>
 
+
             <!--cartes 5-->
             <div class="cartes cartes5">
+
               <div class="description">
                 <h3>Parmentier de queue de boeuf</h3>
-                <p>À la truffe noire sur sa purée de panais</p>
-              </div>
-              <div class="prix">
-                <span>35€</span>
-              </div>
-              <div class="check">
-                <i class="fas fa-check-circle"></i>
+                <div class="description_desc">
+                  <p>À la truffe noire sur sa purée de panais</p>
+                  <span class="prix">35€</span>
+                  <div class="check">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
               </div>
             </div>
 
@@ -131,13 +135,13 @@
             <div class="cartes cartes6">
               <div class="description">
                 <h3>Filet de turbot</h3>
-                <p>Aux agrumes</p>
-              </div>
-              <div class="prix">
-                <span>44€</span>
-              </div>
-              <div class="check">
-                <i class="fas fa-check-circle"></i>
+                <div class="description_desc">
+                  <p>Aux agrumes</p>
+                  <span class="prix">44€</span>
+                  <div class="check">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -151,47 +155,51 @@
             <div class="cartes cartes7">
               <div class="description">
                 <h3>Paris-Brest</h3>
-                <p>Revisité</p>
-              </div>
-              <div class="prix">
-                <span>18€ </span>
-              </div>
-              <div class="check">
-                <i class="fas fa-check-circle"></i>
+                <div class="description_desc">
+                  <p>Revisité</p>
+                  <span class="prix">18€</span>
+                  <div class="check">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
               </div>
             </div>
+
+
+
 
             <!--cartes 8-->
             <div class="cartes cartes8">
               <div class="description">
                 <h3>Macaron au chocolat d'exception</h3>
-                <p>Et glace à la vanille de Madagascar</p>
-              </div>
-              <div class="prix">
-                <span>22€</span>
-              </div>
-              <div class="check">
-                <i class="fas fa-check-circle"></i>
+                <div class="description_desc">
+                  <p>Et glace à la vanille de Madagascar</p>
+                  <span class="prix">22€</span>
+                  <div class="check">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
               </div>
             </div>
+
 
             <!--cartes 9-->
             <div class="cartes cartes9">
               <div class="description">
                 <h3>Mousse au chocolat</h3>
-                <p>Au piment d'Espelette et à la truffe noire</p>
-              </div>
-              <div class="prix">
-                <span>23€ </span>
-              </div>
-              <div class="check">
-                <i class="fas fa-check-circle"></i>
+                <div class="description_desc">
+                  <p>Au piment d'Espelette et à la truffe noire</p>
+                  <span class="prix">23€</span>
+                  <div class="check">
+                    <i class="fas fa-check-circle"></i>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
 
-      </div>
+    </div>
     </section>
 
 
