--- a/La-note-enchantee.html
+++ b/La-note-enchantee.html
@@ -197,10 +197,10 @@
             <!--cartes 10-->
             <div class="cartes cartes10">
               <div class="description">
-                <h3>Baba au rhum revisité</h3>
+                <h3>Tarte au citron meringuée</h3>
                 <div class="description_desc">
-                  <p>Avec son coulis de citron</p>
-                  <span class="prix">22€</span>
+                  <p>Déstructurée</p>
+                  <span class="prix">23€</span>
                   <div class="check">
                     <i class="fas fa-check-circle"></i>
                   </div>
