--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -134,7 +134,7 @@
             <!--cartes 6-->
             <div class="cartes cartes6">
               <div class="description">
-                <h3>Filet de turbot</h3>
+                <h3>Filet de Turbot</h3>
                 <div class="description_desc">
                   <p>Aux agrumes</p>
                   <span class="prix">44€</span>
