--- a/le-delices-des-sens.html
+++ b/le-delices-des-sens.html
@@ -35,7 +35,7 @@
   <!--couleur de fond-->
   <div class="couleurfond">
     <!--Titre-->
-    <div class="menu">
+    <section class="menu">
       <div class="titre">
         <h1>Le délice des sens</h1>
         <div class="coeur">
